--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,19 +19,26 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView_main_user"
+                android:id="@+id/textView_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="당신의 아이디를 입력하세요"
+                android:text="ID : "
                 android:textSize="20dp" />
 
 
 
-            <EditText
-                android:id="@+id/editText_main_user"
+            <TextView
+                android:id="@+id/textView_showid"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="20dp"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView_main_name"
@@ -118,7 +125,6 @@
                 android:layout_weight="1"
                 android:text="추가하기" />
         </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -132,31 +138,53 @@
                 android:textSize="28dp" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_friend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="친구ID를 입력하세요"
+                android:textSize="20dp" />
+
+
+            <EditText
+                android:id="@+id/editText_friend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
 
             <Button
-                android:id="@+id/button_main_result"
+                android:id="@+id/button_friend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="어디서 만날까?" />
+                android:text="입력하기" />
+
             <Button
-                android:id="@+id/button_show_ranking"
+                android:id="@+id/button_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="장소확인하기" />
-            <Button
-                android:id="@+id/button_route_show"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="경로확인하기" />
+                android:text="다음화면" />
+
         </LinearLayout>
+
 
 
 
@@ -178,7 +206,7 @@
 
 
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
